# gitGoingFOSSRepo

./: CMakeLists.txt  README.md
data/: empty.txt  sample.txt
src/: calculator.cpp  calculator.h  config.cpp  config.h  logging.cpp  logging.h
src/app/: main.cpp
tests/: CMakeLists.txt  tests_calculator.cpp
